@@ -1,6 +1,7 @@
 xx May 2006: 0.2.9 Miek <miek@miek.nl>
   -- ?? --
    * gzip.sh, crypt.sh: ignore '-c' option
+   * grep.sh: implement -c option
 
 
 22 Apr 2006: 0.2.8 Miek <miek@miek.nl>
